@@ -21,8 +21,8 @@
 
    *************************************************************************
 
-   Take DOT files (as generated by Verilator) and manipulate them in a number
-   of ways.
+   Take DOT files (as generated by Verilator) and find the subgraph from (or
+   to) one node. 
 
    For Usage see the usage () function below.
 
